output/the-exposer-05ccda33-9fb2-4d06-a7a5-00335e96e5b5/create-the-exposer-f0da4476-03a1-4289-8592-6984386e057f/apply/ingress-05ccda33-9fb2-4d06-a7a5-00335e96e5b5-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k-8-s-the-exposer-05ccda33-9fb2-4d06-a7a5-00335e96e5b5-public
  namespace: nullplatform
  labels:
    nullplatform: "true"
    service: the-exposer
    service_id: 05ccda33-9fb2-4d06-a7a5-00335e96e5b5
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.response-404: >-
          {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"404","messageBody":"no scopes exposed through this service."}}
spec:
  ingressClassName: alb
  rules:
    - host: public.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: response-404
                port:
                  name: use-annotation
